[project]
name = "quantboard2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "polars",
    "duckdb",
    "akshare",
    "yfinance",
    "plotly",
    "python-dotenv",
    "requests",
    "pyarrow",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-mock>=3.15.1",
]
